[package]
name = "ast-builder"
version = "0.1.0"
edition = "2021"
description = "Typed AST construction with visitor pattern and tree traversal for compiler infrastructure"
license = "MIT"
repository = "https://github.com/SuperInstance/ast-builder"
keywords = ["ast", "tree", "visitor", "compiler", "builder"]
categories = ["data-structures", "development-tools"]

[dependencies]
